--- a/client/src/index.css
+++ b/client/src/index.css
@@ -15,8 +15,8 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-a { font-weight: 500; color: #646cff; text-decoration: inherit; }
-a:hover { color: #535bf2; }
+a { font-weight: 500; text-decoration: inherit; }
+
 
 body {
   margin: 0;
